--- a/css/ecommerce-page.css
+++ b/css/ecommerce-page.css
@@ -61,6 +61,8 @@ section {
   background: #1f1f27;
   padding: 10px 20px;
   border-radius: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .search-bar input {
@@ -97,6 +99,8 @@ section {
 .categories {
   background-color: #2b2d36;
   padding-top: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .category {
@@ -141,6 +145,9 @@ i.fa-th-list {
   height: 40px;
   border: 1px solid #8d8ba5;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .products {
@@ -223,6 +230,9 @@ i.fa-th-list {
 .grid .product-info {
   text-align: center;
   padding: 0 20px 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .grid .product-action {
@@ -245,6 +255,7 @@ i.fa-th-list {
   display: flex;
   flex-direction: row;
   gap: 30px;
+  align-items: center;
 }
 
 .lines .product-image-wrapper {
@@ -261,6 +272,8 @@ i.fa-th-list {
 
 .lines .product-info {
   padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .lines .product-action {
